# AI-knowledge-foundation

./: .env.example  .gitignore  CONTRIBUTING.md  PULL_REQUEST.md  README.md  pyproject.toml  requirements-ocr.txt  requirements.txt
.github/: pull_request_template.md
docs/: QNX前处理说明.md  README.md  api-contract.md  architecture.md  branching-strategy.md  chunking-design.md  detailed-design.md  development.md  evaluation.md  feishu-knowledge-bot-status.md  layer1-to-layer2-contract.md  layer2-acceptance-run.md  layer2-hybrid-retrieval-rag.md  operations.md  overview.md  retrieval-context-pack-status.md  知识库前处理与检索说明.md
experiments/: README.md
qnx-knowledge/: README.md  parse-quality-summary.json  parse-quality-summary.md  qnx-doc-manifest.csv
samples/: README.md  document-intake-example.csv  document-intake-template.csv  owner-response-tracker.csv  sample-manifest.csv
scripts/: apply-document-intake-to-samples.ps1  apply-task-intake-to-run.ps1  build_bge_m3_index.py  check-goal-acceptance.ps1  check-intake-readiness.ps1  check-owner-package-readiness.ps1  check-run-evidence-readiness.ps1  check_large_question_regression.py  evaluate-parser-results.ps1  evaluate-results.ps1  export-owner-package.ps1  generate-auto-context-pack.ps1  generate-parse-quality-summary.ps1  generate_cluster_manifest.py  import-owner-package.ps1  import-sample-docs.ps1  ingest-documents.ps1  initialize-agent-prompts-from-tasks.ps1  initialize-agent-run-log-from-tasks.ps1  initialize-parser-evaluation-from-manifest.ps1  initialize-results-from-tasks.ps1  new-experiment-run.ps1  preflight.ps1  (+33 more)
(+163 files in other folders)
